# productmd

./: README.md  pyproject.toml
.github/workflows/: build.yml  cd.yml  ci.yml  feedback.yml
doc/: cli-localize.rst
productmd/: __init__.py  common.py  images.py  localize.py  location.py  version.py
productmd/cli/: localize.py
tests/: README.md  test_cli.py  test_compose_v2.py  test_images_v2.py  test_localize.py  test_localize_auth.py  test_localize_oci.py  test_location.py  test_version.py
tests/compose-v2/metadata/: composeinfo.json  images-oci-contents.json  images.json  modules.json  rpms.json
