[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "productmd"
dynamic = ["version"] # Version delegated to hatchling
description = "Product, compose and installation media metadata library"
readme = "README.md"
license = "LGPL-2.1-only"
license-files = ["LICENSE"]
requires-python = ">=3.8"
authors = [
    { name = "Daniel Mach", email = "dmach@redhat.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://pypi.org/project/productmd"
Repository = "https://github.com/release-engineering/productmd"
# 🚧 Documentation Refactor in Progress
# Documentation = "https://productmd.readthedocs.io/en/latest"

[dependency-groups]
test = [
    "pytest",
]
coverage = [
    "pytest-cov>=5.0.0",
]
dev = [
    { include-group = "test" },
    "ruff",
    "bandit",
    "tox",
    "tox-uv",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "productmd/",
    "tests/",
    "doc/",
    "AUTHORS",
    "LICENSE",
    "Makefile",
]

[tool.hatch.build.targets.wheel]
packages = ["productmd"]

# Ruff configuration (replaces flake8 and ruff.toml)
[tool.ruff]
line-length = 140
target-version = "py38"

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = ["E", "F", "W"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]

# Bandit configuration
[tool.bandit]
skips = ["B310", "B323"]
targets = ["productmd"]

# Tox configuration (replaces tox.ini)
[tool.tox]
env_list = ["py38", "py39", "py310", "py311", "py312", "py313", "format", "lint", "bandit"]

[tool.tox.env_run_base]
description = "Run tests with pytest"
deps = ["pytest"]
commands = [["pytest", { replace = "posargs", default = [], extend = true }]]

[tool.tox.env.lint]
description = "Run ruff linter"
skip_install = true
deps = ["ruff"]
commands = [["ruff", "check"]]

[tool.tox.env.format]
description = "Apply ruff formatting"
skip_install = true
deps = ["ruff"]
commands = [["ruff", "format"]]

[tool.tox.env.bandit]
description = "Run bandit security scanner"
skip_install = true
deps = ["bandit"]
# https://bandit.readthedocs.io/en/latest/config.html
commands = [["bandit", "-c", "pyproject.toml", "-r", "productmd/"]]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
